Removed dead OpenSubtitles code (tests will fail)
